...
            android:layout_below="@id/helpTitle"
            android:layout_margin="8dp"
            android:background="#FF0000FF" />
    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/helpItemList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/topLayout"
        android:layout_above="@+id/divider1"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp" />
...
