<?xml version="1.0" encoding="utf-8"?><!--
Copyright (C) 2016 Pajato Technologies LLC.

This file is part of Pajato GameChat.

GameChat is free software: you can redistribute it and/or modify it under the terms of the GNU
General Public License as published by the Free Software Foundation, either version 3 of the
License, or (at your option) any later version.

GameChat is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even
the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General
Public License for more details.

You should have received a copy of the GNU General Public License along with GameChat.  If not, see
http://www.gnu.org/licenses
-->
<android.support.design.widget.AppBarLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/exp_toolbar_game_inc" />

    <android.support.constraint.ConstraintLayout android:id="@+id/checkers_panel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white">

        <TextView
            android:id="@+id/wins"
            android:layout_width="wrap_content"
            android:layout_height="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:background="@color/colorLightBlue"
            android:text="@string/wins"
            android:textSize="14sp"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="wins" />

        <TextView android:id="@+id/player1WinCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintRight_toLeftOf="@+id/wins"
            app:layout_constraintTop_toTopOf="@id/wins"
            app:layout_constraintBottom_toBottomOf="@id/wins"
            tools:text="0" />

        <TextView android:id="@+id/player2WinCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintLeft_toRightOf="@+id/wins"
            app:layout_constraintTop_toTopOf="@id/wins"
            app:layout_constraintBottom_toBottomOf="@id/wins"
            tools:text="0" />

        <ImageView android:id="@+id/player1Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:contentDescription="@string/player1"
            app:srcCompat="@drawable/ic_account_circle_black_36dp"
            app:layout_constraintTop_toTopOf="@id/wins"
            app:layout_constraintBottom_toBottomOf="@id/wins"
            app:layout_constraintRight_toLeftOf="@+id/rightIndicator1" />

        <TextView android:id="@+id/leftIndicator1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/arrow_right"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/player1Icon"
            app:layout_constraintRight_toLeftOf="@+id/player1Icon"
            app:layout_constraintTop_toTopOf="@+id/player1Icon" />

        <TextView android:id="@+id/rightIndicator1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/arrow_left"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintRight_toLeftOf="@id/player1WinCount"
            app:layout_constraintTop_toTopOf="@+id/player1Icon"
            app:layout_constraintBottom_toBottomOf="@+id/player1Icon"/>

        <ImageView android:id="@+id/player2Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/player2"
            app:srcCompat="@drawable/ic_account_circle_black_36dp"
            app:layout_constraintTop_toTopOf="@+id/wins"
            app:layout_constraintBottom_toBottomOf="@+id/wins"
            app:layout_constraintLeft_toRightOf="@+id/leftIndicator2" />

        <TextView android:id="@+id/leftIndicator2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/arrow_right"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/player2Icon"
            app:layout_constraintLeft_toRightOf="@id/player2WinCount"
            app:layout_constraintTop_toTopOf="@+id/player2Icon" />

        <TextView android:id="@+id/rightIndicator2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/arrow_left"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/player2Icon"
            app:layout_constraintLeft_toRightOf="@+id/player2Icon"
            app:layout_constraintTop_toTopOf="@+id/player2Icon" />

        <TextView android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/colorLightBlue"
            android:textSize="24sp"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/board"
            tools:text="Winner"
            tools:visibility="visible" />

        <GridLayout android:id="@+id/board"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="12dp"
            android:padding="6dp"
            android:columnCount="8"
            android:columnOrderPreserved="true"
            android:orientation="horizontal"
            android:rowCount="8"
            android:rowOrderPreserved="true"
            android:background="@color/colorGray"
            app:layout_constraintLeft_toLeftOf="@id/checkers_panel"
            app:layout_constraintRight_toRightOf="@id/checkers_panel"
            app:layout_constraintTop_toBottomOf="@id/wins" />

    </android.support.constraint.ConstraintLayout>
</android.support.design.widget.AppBarLayout>
