<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright (C) 2016 Pajato Technologies LLC.

This file is part of Pajato GameChat.

GameChat is free software: you can redistribute it and/or modify it under the terms of the GNU
General Public License as published by the Free Software Foundation, either version 3 of the
License, or (at your option) any later version.

GameChat is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even
the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General
Public License for more details.

You should have received a copy of the GNU General Public License along with GameChat.  If not, see
http://www.gnu.org/licenses
-->
<!-- Provide a base menu with four basic options: switch to game panel, settings, feedback and learn

more. -->
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:title="@string/ChatTitle"
        android:icon="@drawable/ic_games_white"
        android:id="@+id/toolbar_game_icon"
        android:orderInCategory="10"
        app:showAsAction="ifRoom" />
</menu>
