...
        <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_gravity="bottom|end"
            android:id="@+id/gameFab"
            android:onClick="onClick"
            app:srcCompat="@drawable/ic_add_white_24dp"
            app:fabSize="normal"
            tools:visibility="visible"/>

    </android.support.design.widget.CoordinatorLayout>
...
